<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="string_title_screen">Calculadora</string>
    <string name="string_hint_type_number">Digite um numero</string>
    <string name="string_result">00</string>
    <string name="string_calculate_history">Histórico de Cálculos</string>
    <string name="string_plus">+</string>
    <string name="string_minus">-</string>
    <string name="string_division">/</string>
    <string name="string_times">x</string>
    <string name="string_toast_success_stored">Cálculo armazenado com sucesso.</string>
    <string name="string_toast_divided_by_zero">Não é possível dividir por 0.</string>
    <string name="string_toast_fill_all_fields">Preencha os campos.</string>
    <string name="string_date">Data:</string>
    <string name="string_date_format">00/00/0000</string>
    <string name="string_result_holder">00</string>
    <string name="string_calc_result">Resultado:</string>
    <string name="string_second_value_holder">00</string>
    <string name="string_first_value_holder">00</string>
    <string name="string_second_value_field">Valor 2:</string>
    <string name="string_operation">+</string>
    <string name="string_first_value_field">Valor 1:</string>
    <string name="string_id_holder">00</string>
    <string name="string_id_field">id:</string>

</resources>