<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/string_title_screen"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_ic_calculate"
        android:hint="@string/string_hint_type_number"
        android:inputType="number"
        android:padding="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <EditText
        android:id="@+id/edt_second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_ic_calculate"
        android:hint="@string/string_hint_type_number"
        android:inputType="number"
        android:padding="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_first_number" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_second_number">


        <Button
            android:id="@+id/btn_plus"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue"
            android:text="@string/string_plus"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_minus"
            app:layout_constraintTop_toTopOf="@+id/btn_minus" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue"
            android:text="@string/string_minus"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_second_number" />

        <Button
            android:id="@+id/btn_division"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue"
            android:text="@string/string_division"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btn_minus"
            app:layout_constraintTop_toTopOf="@+id/btn_minus" />

        <Button
            android:id="@+id/btn_times"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue"
            android:text="@string/string_times"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_division"
            app:layout_constraintTop_toTopOf="@+id/btn_division" />

    </LinearLayout>


    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/string_result"
        android:textColor="@android:color/darker_gray"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_buttons" />

    <Button
        android:id="@+id/btn_open"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:text="@string/string_calculate_history"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result" />


</androidx.constraintlayout.widget.ConstraintLayout>